--- a/src/mailer.properties
+++ b/src/mailer.properties
@@ -1,3 +1,6 @@
-MAILERHOST=192.168.1.80
-MAILERPORT=21
-MAILFROM=
+MAILERHOST=smtp.gmail.com
+MAILERPORT=587
+MAIL_FROM=radhika.kp87@gmail.com
+MAIL_CC=nitin.desai@parinati.in
+NO_REPLY_ID=viraj.mathkar@parinati.in
+
