Mail related changes-By Radhika

--- a/src/mailer.properties
+++ b/src/mailer.properties
@@ -1,6 +1,6 @@
-MAILERHOST=smtp.gmail.com
+MAILERHOST=smtp.parinati.in
 MAILERPORT=587
-MAIL_FROM=radhika.kp87@gmail.com
-MAIL_CC=nitin.desai@parinati.in
-NO_REPLY_ID=viraj.mathkar@parinati.in
-
+MAILFROM=nitin.desai@parinati.in
+MAILCC=nitindesai027@gmail.com
+NO_REPLY=mathkarviraj22@gmail.com
+PASSWORD=Nitin#123
