Commited new files for tool-By Radhika

--- a/src/db.properties
+++ b/src/db.properties
@@ -1,6 +1,6 @@
-db_user=dashboard
-db_pass=dashboard
-db_ip=localhost
-db_dbname=dashboard
+db_user=DASHBOARD
+db_pass=DASHBOARD
+db_ip=192.168.1.244
+db_dbname=DASHBOARD
 driver=oracle.jdbc.driver.OracleDriver
-jdbcURL=jdbc:oracle:thin:@localhost:1521:XE
+jdbcURL=jdbc:oracle:thin:@192.168.1.244:1521:NEWORA
